# simple-rag-app

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  streamlit-app.py
src/: __init__.py
src/chains/: __init__.py  rag_chain.py
src/models/: __init__.py  config.py  llm_factory.py
src/services/: __init__.py  document_service.py  rag_service.py  retrieval_service.py  vectorstore_service.py
src/utils/: embeddings.py  logging_config.py
tests/: conftest.py
tests/integration/: test_api.py  test_rag_service.py
tests/unit/: test_config.py  test_document_service.py  test_vectorstore_service.py
